--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -30,8 +30,9 @@ jobs:
       - name: Grant execute for gradlew
         run: chmod +x gradlew
 
+      # <-- Bagian penting: pastikan hanya ini, tidak ada teks lain di belakang
       - name: Build Debug APK
-        run: ./gradlew assembleDebug
+        run: ./gradlew :app:assembleDebug
 
       - name: Upload APK artifact
         uses: actions/upload-artifact@v4
